--- a/app/src/main/res/layout/weatherinfo.xml
+++ b/app/src/main/res/layout/weatherinfo.xml
@@ -1,4 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
+
+<!--Siyu is driving now, writing the layout of the third page.-->
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
